# faster-ml-casp

./: .pre-commit-config.yaml  README.md  display_route.py  pyproject.toml  round_trip_transformer_script.py  run_medusa.sh  run_medusa_paroutes_n1.sh  run_transformer.sh  run_transformer_paroutes_n1.sh
aizynthfinder/: aizynthfinder.py
aizynthfinder/analysis/: tree_analysis.py
aizynthfinder/context/: config.py
aizynthfinder/context/policy/: extra_expansion_strategies.py  policies.py
aizynthfinder/context/stock/: queries.py  stock.py
aizynthfinder/interfaces/: aizynthapp.py  aizynthcli.py
aizynthfinder/search/: andor_trees.py
aizynthfinder/search/dfpn/: nodes.py  search_tree.py
aizynthfinder/search/mcts/: __init__.py  search.py
aizynthfinder/search/retrostar/: nodes.py  search_tree.py
aizynthfinder/tools/: download_public_data.py
configs/: aizynthfinder_template_based_default_config.yml  config.yml  medusa_default_config.yml  medusa_paroutes_n1_config.yml  transformer_default_config.yml  transformer_medusa_default_config.yml  transformer_paroutes_n1_config.yml  transformer_product_model_config.yml  transformer_transformer_default_config.yml
data/uspto50k_test/: products.txt  reactants.txt  readme.md
external_modelzoo/ssbenchmark/ssmodels/: __init__.py  model_chemformer.py  model_localretro.py  model_transformer.py
modelzoo/ssmodels/: __init__.py  model_transformer.py
single_step_retro/: expansion_policy.py  main.py
single_step_retro/configs/: config_medusa.yaml
single_step_retro/src/: score_predictions.py
single_step_retro/src/data_handling/: batching.py  data_module.py  tokenization.py
single_step_retro/src/decoding/: speculative_decoding.py  standard_decoding.py
single_step_retro/src/model/: common_modules.py
single_step_retro/src/model/autoregressive/: __init__.py  embeddings.py  lightning_module.py  modules.py
single_step_retro/src/model/medusa/: __init__.py  lightning_module.py  modules.py
single_step_retro/src/utils/: activations.py  callbacks.py  drafting.py  lr_schedule.py  metrics.py
