[project]
name = "faster-ML-CASP"
version = "0.1.0"
description = "Multi-step retrosynthesis with accelerated template-free single-step models."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "deprecated>=1.2.18",
    "gdown>=5.2.0",
    "lightning>=2.5.1.post0",
    "line-profiler>=4.2.0",
    "networkx>=3.4.2",
    "onnxruntime>=1.22.0",
    "pandas>=2.2.3",
    "paretoset>=1.2.4",
    "psutil>=7.0.0",
    "rdchiral>=1.1.0",
    "rdkit>=2024.9.6",
    "registry-factory==0.1.2",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "tables>=3.10.2",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
]

[project.scripts]
aizynthapp = "aizynthfinder.interfaces.aizynthapp:main"
aizynthcli = "aizynthfinder.interfaces.aizynthcli:main"
cat_aizynth_output = "aizynthfinder.tools.cat_output:main"
download_public_data = "aizynthfinder.tools.download_public_data:main"
smiles2stock = "aizynthfinder.tools.make_stock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aizynthfinder", "single_step_retro", "external_modelzoo", "molbart"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
